[package]
name = "codecrafters-dns-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
clap = { version = "4.5.26", features = ["derive"] }
rand = "0.8.5"
thiserror = "1.0.38"                             # error handling
